[package]
name = "JavaBridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
egui = "0.15"
eframe = "0.15"
sysinfo = "0.30.13"
native-dialog = "0.7.0"
ferris-says = "0.3.1"
log = "0.4.22"
env_logger = "0.11.3"
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi", "minwinbase", "synchapi", "winnt"] }
serde_json = "1.0.120"
whoami = "1.5.1"
once_cell = "1.19.0"
